<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.0">
  <GVL Name="GVL_RecipeTable" Id="{662bd03b-3e9b-4ef4-9354-3ee70aa80e8d}">
    <Declaration><![CDATA[VAR_GLOBAL
	aRecipeNames 			: ARRAY[0..cMaxTableRows] OF STRING;
	aVariableNames 			: ARRAY[0..cMaxTableRows] OF STRING;
	aVariableValues 		: ARRAY[0..cMaxTableRows] OF STRING;
	nVariableIndex			: INT;
	nVariableCount 			: INT;
	nRecipeIndex 			: INT;
	nRecipeSelectionIndex 	: INT := -1;
	nRecipeCount 			: INT;
END_VAR
VAR_GLOBAL CONSTANT
	cMaxTableRows 			: INT := 9;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>